# CoT_rating

./: 06_try_CoT_rating.ipynb  README.md  pyproject.toml
