[project]
name = "cot-rating"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wassname", email = "1103714+wassname@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.47.0",
    "cmap>=0.6.2",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
]

[project.scripts]
cot-rating = "cot_rating:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
